--- a/dist-newstyle/packagedb/ghc-9.4.8/AOC2021-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/AOC2021-0.1.0.0-inplace.conf
@@ -9,7 +9,7 @@ author:               Aske
 category:             Advent Of Code
 abi:                  inplace
 exposed:              True
-exposed-modules:      Day01
+exposed-modules:      Day01 Day02
 import-dirs:
     C:\Users\AskeSW\Desktop\AAU\other\Haskell\projects\aoc\2021\dist-newstyle\build\x86_64-windows\ghc-9.4.8\AOC2021-0.1.0.0\build
 
